DL-113 update all service by removing the old methode in java 8 is it using collectors to get unmodifiable list and instade it using list